package architectureTest.protobuf;

message ServerCode {
    required int32 code = 1;
}