package architectureTest.protobuf;

message StatResponse {
    required double sortAvg = 1;
    required double processAvg = 2;
}